Changes in Version 3.0-3

  o The "Formula" package is now not only in the list of dependencies
    but is also imported in the NAMESPACE, in order to facilitate
    importing "betareg" in other packages.


Changes in Version 3.0-2

  o Avoid .Call()ing logit link functions directly, instead
    use elements of make.link("logit").


Changes in Version 3.0-1

  o Small consistency updates in labeling coefficients for
    current R-devel.


Changes in Version 3.0-0

  o New release accompanying the second JSS paper: "Extended Beta
    Regression in R: Shaken, Stirred, Mixed, and Partitioned" by Gruen,
    Kosmidis, and Zeileis which appears as Journal of Statistical
    Software 48(11). See also citation("betareg"). The paper presents
    the recently introduced features: bias correction/reduction in
    betareg(), recursive partitioning via betatree(), and finite
    mixture modeling via betamix(). See also vignette("betareg-ext",
    package = "betareg") for the vignette version within the package.


Changes in Version 2.4-1

  o Formula interface for betamix() changed to allow for three parts
    in the right hand side where the third part relates to the
    concomitant variables.

  o Modified the internal structure of vignettes/tests. The original
    vignettes are now moved to the vignettes directory, containing also
    .Rout.save files. Similarly, an .Rout.save for the examples is
    added in the tests directory.


Changes in Version 2.4-0

  o Support bias-corrected (BC) and bias-reduced (BR) maximum likelihood
    estimation of beta regressions. See the "type" argument of betareg().
    To enable BC/BR, an additional Fisher scoring iteration was added
    that (by default) also enhances the usual ML results.
    
  o New vignette("betareg-ext", package = "betareg") introducing BC/BR
    estimation along with the recent additions beta regression trees and latent
    class beta regression (aka finite mixture beta regression models).
