@@ -11,7 +11,8 @@
 
 \usage{
 \method{predict}{betareg}(object, newdata = NULL,
-  type = c("response", "link", "precision", "variance"), na.action = na.pass, \dots)
+  type = c("response", "link", "precision", "variance", "quantile"),
+  na.action = na.pass, at = 0.5, \dots)
 }
 
 \arguments{
@@ -20,9 +21,13 @@
     which to predict. If omitted, the original observations are used.}
   \item{type}{character indicating type of predictions: fitted means of response (\code{"response"}),
     corresponding linear predictor (\code{"link"}), fitted precision parameter
-    phi (\code{"precision"}), or fitted variances of response (\code{"variance"}).}
+    phi (\code{"precision"}), fitted variances of response (\code{"variance"}),
+    or fitted quantile(s) of the response distribution (\code{"quantile"}).}
   \item{na.action}{function determining what should be done with missing values
     in \code{newdata}. The default is to predict \code{NA}.}
+  \item{at}{numeric vector indicating the level(s) at which quantiles
+    should be predicted (only if \code{type = "quantile"}), defaulting
+    to the median \code{at = 0.5}.}
   \item{\dots}{currently not used.}
 }
 
@@ -35,7 +40,8 @@ cbind(
   predict(gy2, type = "response"),
   predict(gy2, type = "link"),
   predict(gy2, type = "precision"),
-  predict(gy2, type = "variance")
+  predict(gy2, type = "variance"),
+  predict(gy2, type = "quantile", at = c(0.25, 0.5, 0.75))
 )
 }
 
